java/java-tests/testData/codeInsight/multipleJdks/java7/p/DeclaredTypeOfVariableImplementsUnknownType.java
package p;
abstract class B {
  void f(A a) {
    <error descr="Cannot access java.util.stream.Stream">a</error>.foo();
  }
}